src/objects/fflbx__Receipt__c.object
<CustomObject>
    <customHelpPage>fflbx__receipthelp</customHelpPage>
    <fields>
        <fullName>fflbx__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__BankCharges__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bank Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__BatchProcessStatus__c</fullName>
        <formula>Text(fflbx__BatchProcess__r.fflbx__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflbx__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>AR Cash Transactions</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__CashEntriesCount__c</fullName>
        <label>Number of Cash Entries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__CashEntriesTotal__c</fullName>
        <label>Total of Cash Entries</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__CashEntryType__c</fullName>
        <label>Cash Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LBX Only</fullName>
                    <default>true</default>
                    <label>LBX Only</label>
                </value>
                <value>
                    <fullName>ALL Transactions</fullName>
                </value>
                <value>
                    <fullName>Group By Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__CashProcessStatus__c</fullName>
        <label>Cash Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Cash Entry Error</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__CompletedLinesCount__c</fullName>
        <label>Completed Lines Count</label>
        <summaryFilterItems>
            <field>fflbx__ReceiptLineItem__c.fflbx__Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>fflbx__ReceiptLineItem__c.fflbx__Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fflbx__CreditDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fflbx__Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__ErroredLineCount__c</fullName>
        <label>Errored Line Count</label>
        <summaryFilterItems>
            <field>fflbx__ReceiptLineItem__c.fflbx__Status__c</field>
            <operation>equals</operation>
            <value>Error, Cash Entry Error, Cash Matching Error</value>
        </summaryFilterItems>
        <summaryForeignKey>fflbx__ReceiptLineItem__c.fflbx__Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fflbx__LineChargesTotal__c</fullName>
        <label>Line Charges Total</label>
        <summarizedField>fflbx__ReceiptLineItem__c.fflbx__BankChargesAmount__c</summarizedField>
        <summaryForeignKey>fflbx__ReceiptLineItem__c.fflbx__Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fflbx__LineCount__c</fullName>
        <label>Line Count</label>
        <summaryForeignKey>fflbx__ReceiptLineItem__c.fflbx__Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fflbx__LockboxNumber__c</fullName>
        <formula>fflbx__Lockbox__r.fflbx__NumberWiretransfer__c</formula>
        <label>Bank Lockbox Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__Lockbox__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Lockbox</label>
        <referenceTo>fflbx__Lockbox__c</referenceTo>
        <relationshipLabel>AR Cash Transactions</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__MatchedLinesCount__c</fullName>
        <label>Matched Lines Count</label>
        <summaryFilterItems>
            <field>fflbx__ReceiptLineItem__c.fflbx__Status__c</field>
            <operation>equals</operation>
            <value>Matched</value>
        </summaryFilterItems>
        <summaryForeignKey>fflbx__ReceiptLineItem__c.fflbx__Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fflbx__MatchingDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Matching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fflbx__PartMatchedLinesCount__c</fullName>
        <label>Part Matched Lines Count</label>
        <summaryFilterItems>
            <field>fflbx__ReceiptLineItem__c.fflbx__Status__c</field>
            <operation>equals</operation>
            <value>Part Matched</value>
        </summaryFilterItems>
        <summaryForeignKey>fflbx__ReceiptLineItem__c.fflbx__Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fflbx__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cash Entry Error</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Error</fullName>
                </value>
                <value>
                    <fullName>Part Complete</fullName>
                </value>
                <value>
                    <fullName>Part Matched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__Total__c</fullName>
        <label>Total</label>
        <summarizedField>fflbx__ReceiptLineItem__c.fflbx__Amount__c</summarizedField>
        <summaryForeignKey>fflbx__ReceiptLineItem__c.fflbx__Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fflbx__ValidateDepositDate__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Validate that the deposit date on imported lines matches the Deposit Date entered here. Errors will be logged if the dates do not match. (When disabled, the deposit date on imported lines is replaced with the Deposit Date entered here.)</inlineHelpText>
        <label>Validate Deposit Date</label>
        <type>Checkbox</type>
    </fields>
    <label>AR Cash Transaction</label>
    <listViews>
        <fullName>fflbx__All</fullName>
        <columns>NAME</columns>
        <columns>fflbx__Lockbox__c</columns>
        <columns>fflbx__CreditDate__c</columns>
        <columns>fflbx__MatchingDate__c</columns>
        <columns>fflbx__Currency__c</columns>
        <columns>fflbx__BankCharges__c</columns>
        <columns>fflbx__Status__c</columns>
        <columns>fflbx__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>AR Cash Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Cash Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>